@@ -13,6 +13,7 @@ v3.8.0 (woocommerce-improvements) (Unreleased)
 - New: WooCommerce - Added show/hide cart total badge option.
 - Improvement: WooCommerce - Modify the Cart label section via Shortcodes. (Needs Doc)
 - Fix: WooCommerce - Margin issue for single shop page with the Full width & Contained Layout.
+- Fix: Woocommerce - Show password option is not visible on Woocommerce account page.
 
 v3.7.9
 - Fix: Added correct version number for background updater.
